--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
     configurations.all {
-
         resolutionStrategy.eachDependency { DependencyResolveDetails details ->
             def requested = details.requested
             if (requested.group == 'com.android.support') {
@@ -32,21 +34,20 @@ android {
     }
 }
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':android-smart-image-view-1.0.0')
-    compile project(path: ':magicindicator')
-    compile project(':xutils')
-    compile project(':gson-2.5')
-    compile project(':library')
-    compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    compile 'com.android.support:recyclerview-v7:27.1.1'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.jcodecraeer:xrecyclerview:1.3.2'
-    testCompile 'junit:junit:4.12'
-    compile 'commons-beanutils:commons-beanutils:1.8.3'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
-    compileOnly files('libs/openbeans-1.0.jar')
+    implementation project(':android-smart-image-view-1.0.0')
+    implementation project(path: ':magicindicator')
+    implementation project(':xutils')
+    implementation project(':gson-2.5')
+    implementation project(':library')
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.jcodecraeer:xrecyclerview:1.3.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
+    compile(name: 'geetest_testbutton_android_v3.5.3', ext: 'aar')
 }
