--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,5 @@ dependencies {
     implementation 'com.jcodecraeer:xrecyclerview:1.3.2'
     testImplementation 'junit:junit:4.12'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
-    compile(name: 'geetest_testbutton_android_v3.5.3', ext: 'aar')
+    implementation(name: 'geetest_testbutton_android_v3.5.3', ext: 'aar')
 }
