1.新增单车详情页面。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".Activity.UserMessageActivity" />
         <activity android:name=".Activity.HotPointActivity" />
         <activity android:name=".Activity.AroundActivity" />
-        <activity android:name=".Activity.SettingActivity"></activity>
+        <activity android:name=".Activity.SettingActivity" />
+        <activity android:name=".Activity.BicycleDetailActivity"></activity>
     </application>
 
 </manifest>
